style optimize responsive an bug fix scrollbar

--- a/src/app/about-me-section/about-me-section.component.scss
+++ b/src/app/about-me-section/about-me-section.component.scss
@@ -47,12 +47,12 @@
 
     .aboutMeSection {
         height: 200vw;
-        flex-direction: column;
+        flex-direction: column-reverse;
 
         .description {
             h2 {
                 position: unset;
-                margin-top: 7.29vw;
+                margin-top: -109vw;
                 margin-left: 4.44vw;
                 font-size: 8.89vw;
                 line-height: 2.64;
