--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@ body {
     width: 100%;
     max-width: 1920px;
     padding: -40px, 72px;
+    overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
